--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,27 @@ node_modules
 /src/generated/prisma
 
 /src/generated/prisma
+**/node_modules/
+**/dist/
+
+.env
+client/.env.local
+client/.env.development
+client/.env.production
+server/.env
+
+client/.next/
+
+.DS_Store
+Thumbs.db
+
+.vscode/
+
+client/node_modules/
+server/node_modules/
+client/dist/
+server/dist/
+client/.env
+server/.env
+client/.next/
+node_modules
